--- a/views/css/style.css
+++ b/views/css/style.css
@@ -9,14 +9,23 @@
 	background-color: #ccc;
 }
 .bg-img img{
-	display: none;
 	min-width: 100%;
 	min-height: 100%;
-	opacity: 0.7;
+	opacity: 1;
 	position: absolute;
-	top: -100px;
-	left: -180px;
-	z-index: -999;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+.word{
+    font-size: 50px;
+    position: absolute;
+    top: 40%;
+    left: 0;
+    color: #fff;
+    transition: translateY(-60%);
+    text-shadow:2px 2px 3px #333;
+    font-family: "楷体";
 }
 .login-part{
 	position: absolute;
@@ -27,7 +36,7 @@
 	position: absolute;
 	top: 100px;
 	width: 360px;
-	text-shadow:2px 2px 3px #333;
+	text-shadow:2px 2px 4px #333;
 	opacity: 0.2;
 }
 .logo h1{
