--- a/views/index.html
+++ b/views/index.html
@@ -9,10 +9,16 @@
 </head>
 <body>
 	<div class="bg-img">
-		<img src="">
-		<p></p>
+		<img src="./images/bg1.jpg">
+        <img src="./images/bg2.jpg">
+        <img src="./images/bg3.jpg">
+        <img src="./images/bg4.jpg">
+        <img src="./images/bg5.jpg">
+        <img src="./images/bg6.jpg">
+        <img src="./images/bg7.jpg">
 	</div>
 	<div class="g-bd">
+        <p class="word"></p>
 		<div class="login-part">
 			<div class="logo">
 				<h1>&nbsp;榕叶</h1>
