reg/log box action complete

--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,7 @@
 					<li>注册</li>
 				</ul>
 				<div class="log">
+                    <p>使用榕叶账号登录</p>
 					<form action="#" method="post">
 						<input type="text" placeholder="用户名">
 						<input type="password" placeholder="密码">
@@ -37,17 +38,18 @@
 					</form>
 				</div>
 				<div class="reg">
+                    <p>加入榕叶，分享你的心情</p>
 					<form action="#" method="post">
-						<input type="text">
-						<input type="password">
-						<input type="submit" value="注 册">	
+						<input type="text" placeholder="用户名">
+						<input type="password" placeholder="密码">
+						<input type="submit" value="注 册">
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="g-ft">
-		
+		Designed by &copy; <span>XuYingrong</span>
 	</div>
 	<script src="./js/index.js"></script>
 </body>
