--- a/views/css/style.css
+++ b/views/css/style.css
@@ -82,21 +82,25 @@
 	color:#1ba321;
 	border-bottom: 1px solid #1ba321;
 }
-.log{
+.log,.reg{
 	display: block;
 	width: 80%;
 	margin: 0 auto;
-	padding: 30px 0;
+	padding: 10px 0;
 	text-align: center;
 }
-.log input{
+.log p,.reg p{
+    height: 30px;
+    line-height: 30px;
+}
+.log input,.reg input{
 	box-sizing:border-box;
 	width: 100%;
 	height: 34px;
 	padding: 0 5px;
-	margin: 20px 0 0;
+	margin: 0 0 20px;
 }
-.log input[type='submit']{
+.log input[type='submit'],.reg input[type='submit']{
 	background: #1ba321;
 	border:none;
 	height: 40px;
@@ -105,4 +109,14 @@
 }
 .reg{
 	display: none;
+}
+.g-ft{
+    height: 50px;
+    width: 100%;
+    background-color: rgba(120,120,120,0.7);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    line-height: 50px;
+    text-align: center;
 }
