--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,4 +1,16 @@
 /*首页*/
+.loading{
+    background-image: url('../images/loading.gif');
+    background-color: #dee1e2;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+}
 .bg-img{
 	min-width: 100%;
 	min-height: 100%;
@@ -11,7 +23,7 @@
 .bg-img img{
 	min-width: 100%;
 	min-height: 100%;
-	opacity: 1;
+	opacity: 0.8;
 	position: absolute;
 	top: 0;
 	left: 0;
