--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,13 @@
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/style.css">
 	<script src="./js/jquery-2.1.4.min.js"></script>
+    <script>
+        var _LoadingHtml = '<div class="loading"></div>';
+        document.write(_LoadingHtml);
+    </script>
 </head>
 <body>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<div class="bg-img">
 		<img src="./images/bg1.jpg">
         <img src="./images/bg2.jpg">
