--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,6 @@
     </script>
 </head>
 <body>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<div class="bg-img">
 		<img src="./images/bg1.jpg">
         <img src="./images/bg2.jpg">
@@ -53,8 +52,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="g-ft">
-		Designed by &copy; <span>XuYingrong</span>
+	<div class="g-ft" style="position: absolute;bottom: 0;left: 0;">
+		Designed by &copy; <span>XuYingrong</span>-master Kinice
 	</div>
 	<script src="./js/index.js"></script>
 </body>
