--- a/views/css/reset.css
+++ b/views/css/reset.css
@@ -1,96 +1,31 @@
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-    font-family: '微软雅黑','microsoft Yahei';
-}
-body {
-    line-height:1;
-}
-
-:focus {
-	outline: 1;
-}
-
-article,aside,canvas,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section,summary { 
-    display:block;
-}
-
-nav ul {
-    list-style:none;
-}
-
-blockquote, q {
-    quotes:none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
-}
-
-a {
-    margin:0;
-    padding:0;
-    border:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
-}
-
-mark {
-    background-color:#ff9;
-    color:#000; 
-    font-style:italic;
-    font-weight:bold;
-}
-
-del {
-    text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
-    border-bottom:1px dotted #000;
-    cursor:help;
-}
-
-table {
-    border-collapse:collapse;
-    border-spacing:0;
-}
-
-hr {
-    display:block;
-    height:1px;
-    border:0;   
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
-}
-
-input, select {
-    vertical-align:middle;
-}
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td { margin:0; padding:0; }
+body {background-color: #F2F2F2; color:#555; font-size:15px; font-family: Verdana, Arial, Helvetica,"Microsoft Yahei","微软雅黑"; }
+td,th,caption { font-size:14px; }
+h1, h2, h3, h4, h5, h6 { font-weight:normal; font-size:100%; }
+address, caption, cite, code, dfn, em, strong, th, var { font-style:normal; font-weight:normal;}
+a { color:#555; text-decoration:none; }
+a:hover { text-decoration:underline; }
+img { border:none;border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; max-width:100%; }
+ol,ul,li { list-style:none; }
+input, textarea, select, button { font:14px Verdana,Helvetica,Arial,sans-serif; outline: 0;}
+table { border-collapse:collapse; }
+html {overflow-y: scroll;height: 100%;}
+header,aside,nav,footer,section,article{ display: block; margin:0; padding:0;}
+/* MarkDown */
+pre {background-color: #F8F8F8;border: 1px solid #CCCCCC;border-radius: 3px;overflow: auto;padding: 5px;}
+pre code {background-color: #F8F8F8;border: none;padding: 0;}
+code {font-family: Consolas, Monaco, Andale Mono, monospace;background-color:#F8F8F8;border: 1px solid #CCCCCC;border-radius: 3px;padding: 0 0.2em;line-height: 1;}
+pre > code {border: 0;margin: 0;padding: 0;}
+blockquote{color:#666666;margin:0;padding-left: 3em;border-left: 0.5em #EEE solid;}
+.m-article h1,.m-article h2,.m-article h3,.m-article h4,.m-article h5,.m-article h6{font-weight: bold;}
+.m-article h1{color: #000;font-size: 28px;}.m-article h2{border-bottom: 2px solid #cccccc;color: #000;font-size: 24px;}
+.m-article h3{font-size: 18px;border-bottom: 1px solid #ccc;}.m-article h4{font-size: 16px;}.m-article h5{font-size: 14px;}.m-article h6{color: #777;background-color: inherit;font-size: 14px;}
+.m-article hr{height: 0.2em;border: 0;color: #ccc;background-color: #ccc;}
+.m-article ul,.m-article ol { margin: 1em 0; padding: 0 0 0 2em; }li p:last-child { margin:0; }
+.m-article p, .m-article blockquote, .m-article ul, .m-article ol, .m-article dl, .m-article li, .m-article table, .m-article pre {margin: 15px 0;}
+.m-article p{margin:1em 0;}
+/* css common */
+.clearfix:after {content: "."; display: block; height:0; clear:both; visibility: hidden;}
+.clearfix { zoom:1; }
+.fl{ float: left; }
+.fr{ float: right; }
