--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,3 +1,32 @@
+/*公共部分*/
+.g-hd{
+	width: 100%;
+    height: 58px;
+    background-color: #3b3e47;
+    position: fixed;
+    top: 0;
+    left: 0;
+    color: #ececee;
+    z-index: 10000;
+}
+.g-bd{
+	width: 100%;
+    height: 100%;
+    margin-top: 58px;
+}
+.g-inner {
+    width: 720px;
+    margin: 20px auto 0;
+    padding-top: 10px;
+    height: 2000px;
+}
+.g-ft{
+    height: 50px;
+    width: 100%;
+    background-color: rgba(120,120,120,0.7);
+    line-height: 50px;
+    text-align: center;
+}
 /*首页*/
 .loading{
     background-image: url('../images/loading.gif');
@@ -122,13 +151,186 @@
 .reg{
 	display: none;
 }
-.g-ft{
-    height: 50px;
-    width: 100%;
-    background-color: rgba(120,120,120,0.7);
+/*头部*/
+.m-logo {
+    width: auto;
     position: absolute;
-    bottom: 0;
+    left: 6%;
+}
+.m-logo h1 {
+    font-size: 20px;
+    height: 58px;
+    line-height: 58px;
+}
+.mobile-icon {
+    font-size: 24px;
+    color: #fff;
+    display: none;
+    height: 24px;
+    width: 24px;
+}
+.home {
+    position: absolute;
+    top: 0;
     left: 0;
+}
+.menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.mobile-menu {
+    width: 90%;
+    padding: 10px 0px;
+    background: #acd0ce;
+    position: absolute;
+    top: 56px;
+    right: 5%;
+    z-index: 100000;
+    border-radius: 4px;
+    display: none;
+}
+.mobile-menu:after {
+    content: "";
+    border-style: solid;
+    border-width: 10px;
+    border-color: transparent transparent #acd0ce transparent;
+    position: absolute;
+    top: -20px;
+    right: 4px;
+    z-index: 999999;
+}
+.pin{
+    display: block;
+   	float: left;
+   	line-height: 58px;
+   	height: 58px;
+    z-index: 999991;
+    cursor:pointer;
+    color: #fff;
+    font-size: 18px;
+    transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);       /* IE 9 */
+    -webkit-transform: rotate(-90deg);   /* Safari and Chrome */
+    -o-transform: rotate(-90deg);        /* Opera */
+    -moz-transform: rotate(-90deg);
+    transition: transform 0.2s;
+    -moz-transition: transform 0.2s;
+    -webkit-transition: transform 0.2s;
+    -o-transition: transform 0.2s;
+}
+/*头部导航栏*/
+.m-right{
+	float: right;
+	padding-right: 10px;
+}
+.m-nav {
+    float: left;
+    padding-right: 20px;
+}
+.m-nav > ul > li {
+    float: left;
+    height: 58px;
+    line-height: 58px;
+}
+.m-nav > ul > li > a {
+    display: block;
+    height: 100%;
+    text-decoration: none;
+    padding: 0 16px;
+    color: #ececee;
+}
+.m-nav > ul > li > a:hover {
+    border-bottom: 2px inset #50c5c3;
+    color: #50c5c3;
+}
+.nav-inside {
+    position: relative;
+    z-index: 10001;
+}
+.nav-inside:hover ul {
+    visibility: visible;
+    opacity: 1;
+}
+.nav-inside ul {
+    position: absolute;
+    width: 100%;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+}
+.nav-inside ul li {
+    width: inherit;
+    background-color: #3b3e47;
+}
+.nav-inside ul li a {
+    color: #ececee;
+    display: block;
+    text-align: center;
+}
+.nav-inside ul li a:hover {
+    color: #3b3e47;
+    background-color: #ececee;
+    text-decoration: none;
+    border-bottom: 2px solid #50c5c3;
+}
+.m-user {
+	float: left;
+    height: 58px;
+    line-height: 58px;
+    color: #ececee;
+}
+
+.m-user a {
+    color: #ececee;
+}
+
+.m-user h1 {
+    float: left;
+    padding-right: 20px;
+}
+.back-to-top {/*回到顶部*/
+    cursor: pointer;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    color: #000;
+    background-color: #888;
+    font-size: 34px;
     line-height: 50px;
     text-align: center;
+    border-radius: 10px;
+    position: fixed;
+    bottom: 150px;
+    right: 150px;
+    display: none;
+    -webkit-transition: background-color 0.15s;
+    -moz-transition: background-color 0.15s;
+    -ms-transition: background-color 0.15s;
+    -o-transition: background-color 0.15s;
+    transition: background-color 0.15s;
+}
+.back-to-top:hover {
+    background-color: #bbb;
+}
+.talk-box{
+	width: 100%;
+	margin: 10px 0;
+	box-shadow: 1px 1px 2px #444;
+	border-radius: 3px;
+	background-color: #fff;
+	padding: 2px 15px;
+}
+.talk-box h1{
+	height: 35px;
+	line-height: 35px;
+	font-size: 18px;
+}
+.talk-left .avatar{
+	height: 44px;
+	width: 44px;
+	border-radius: 50%;
 }
