--- a/views/mainPage.html
+++ b/views/mainPage.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./fonts/iconfont.css">
 	<link rel="stylesheet" href="./css/style.css">
 	<script src="./js/jquery-2.1.4.min.js"></script>
-	<script src="./js/header.js"></script>
 </head>
 <body>
 	 <div class="g-hd">
@@ -52,22 +51,87 @@
 	 		<div class="talk-box">
 	 			<div class="talk-left">
 	 				<img src="images/avatar1.jpg" class="avatar">
-	 				<span class="name"></span>
+	 				<span class="name">Kinice</span>
 	 			</div>
 	 			<div class="talk-main">
-	 				
+	 		        <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
+                    <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
+                    <div class="func">
+                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                    </div>
 	 			</div>
 	 		</div>
-	 		<div class="talk-box"></div>
-	 		<div class="talk-box"></div>
-	 		<div class="talk-box"></div>
-	 		<div class="talk-box"></div>
-	 		<div class="talk-box"></div>
-	 		<div class="talk-box"></div>
+            <div class="talk-box">
+                <div class="talk-left">
+                    <img src="images/avatar1.jpg" class="avatar">
+                    <span class="name">Kinice</span>
+                </div>
+                <div class="talk-main">
+                    <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
+                    <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
+                    <div class="func">
+                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                    </div>
+                </div>
+            </div>
+            <div class="talk-box">
+                <div class="talk-left">
+                    <img src="images/avatar1.jpg" class="avatar">
+                    <span class="name">Kinice</span>
+                </div>
+                <div class="talk-main">
+                    <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
+                    <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
+                    <div class="func">
+                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                    </div>
+                </div>
+            </div>
+            <div class="talk-box">
+                <div class="talk-left">
+                    <img src="images/avatar1.jpg" class="avatar">
+                    <span class="name">Kinice</span>
+                </div>
+                <div class="talk-main">
+                    <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
+                    <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
+                    <div class="func">
+                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                    </div>
+                </div>
+            </div>
+            <div class="talk-box">
+                <div class="talk-left">
+                    <img src="images/avatar1.jpg" class="avatar">
+                    <span class="name">Kinice</span>
+                </div>
+                <div class="talk-main">
+                    <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
+                    <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
+                    <div class="func">
+                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                    </div>
+                </div>
+            </div>
+            <div class="talk-box">
+                <div class="talk-left">
+                    <img src="images/avatar1.jpg" class="avatar">
+                    <span class="name">Kinice</span>
+                </div>
+                <div class="talk-main">
+                    <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
+                    <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
+                    <div class="func">
+                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                    </div>
+                </div>
+            </div>
 	 	</div>
 	 </div>
+     <i class="iconfont back-to-top">&#xe60d;</i>
 	 <div class="g-ft">
 	 	Designed by &copy; <span>XuYingrong</span>-master Kinice
 	 </div>
+     <script src="./js/header.js"></script>
 </body>
 </html>
