--- a/views/mainPage.html
+++ b/views/mainPage.html
@@ -11,30 +11,25 @@
 	<script src="./js/jquery-2.1.4.min.js"></script>
 </head>
 <body>
+<div class="bg-img">
+    <img src="images/bg.png"/>
+</div>
 	 <div class="g-hd">
 	 	 <div class="m-logo">
-	        <h1>榕叶-分享心情的地方</h1>
+	        <h1><span>榕叶</span> 分享心情的地方</h1>
 	        <i class="iconfont mobile-icon home">&#xe609;</i>
 	        <i class="iconfont mobile-icon menu">&#xe606;</i>
-	        <div class="mobile-menu">
-	                <div class="mobile-search">
-	                    <form action="#">
-	                        <input  type="text" placeholder="search">
-	                    </form>
-	                </div>
-	        </div>
 	    </div>
 	    <div class="m-right">
 	    	<nav class="m-nav">
             <ul>
                 <li><a href="/">主页</a></li>
                 <li class="nav-inside">
-                    <a href="/about">关于我</a>
+                    <a href="/about">我的心情</a>
                     <ul>
                         <li><a href="#">设置</a></li>
                     </ul>  
                 </li>
-                <li><a href="#">我的心情</a></li>
             </ul>
         </nav>
         <div class="m-user">
@@ -57,7 +52,25 @@
 	 		        <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
                     <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
                     <div class="func">
-                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 12</span>
+                    </div>
+                    <div class="comment-box">
+                        <div class="comment-li">
+                            <div class="comment">
+                                <span class="com-name">Kinice：</span>我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。
+                            </div>
+                            <div class="comment-time">
+                                2015-12-18
+                            </div>
+                        </div>
+                        <div class="comment-li">
+                            <div class="comment">
+                                <span class="com-name">Kinice：</span>我是评论的内容。。
+                            </div>
+                            <div class="comment-time">
+                                2015-12-18
+                            </div>
+                        </div>
                     </div>
 	 			</div>
 	 		</div>
@@ -89,7 +102,7 @@
             </div>
             <div class="talk-box">
                 <div class="talk-left">
-                    <img src="images/avatar1.jpg" class="avatar">
+                    <img src="images/avatar2.jpg" class="avatar">
                     <span class="name">Kinice</span>
                 </div>
                 <div class="talk-main">
@@ -102,7 +115,7 @@
             </div>
             <div class="talk-box">
                 <div class="talk-left">
-                    <img src="images/avatar1.jpg" class="avatar">
+                    <img src="images/avatar2.jpg" class="avatar">
                     <span class="name">Kinice</span>
                 </div>
                 <div class="talk-main">
@@ -115,7 +128,7 @@
             </div>
             <div class="talk-box">
                 <div class="talk-left">
-                    <img src="images/avatar1.jpg" class="avatar">
+                    <img src="images/avatar2.jpg" class="avatar">
                     <span class="name">Kinice</span>
                 </div>
                 <div class="talk-main">
