--- a/views/mainPage.html
+++ b/views/mainPage.html
@@ -43,6 +43,14 @@
 	 		<div class="talk-box">
 	 			<h1>最新动态</h1>
 	 		</div>
+            <div class="talk-box">
+                <p class="con-p">有什么心情想告诉大家？</p>
+                <div class="con-form clearfix">
+                    <div class="input"><textarea name="content"></textarea></div>
+                    <input type="file" name="pic">
+                    <input type="button" value="发布">
+                </div>
+            </div>
 	 		<div class="talk-box">
 	 			<div class="talk-left">
 	 				<img src="images/avatar1.jpg" class="avatar">
@@ -52,7 +60,7 @@
 	 		        <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
                     <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
                     <div class="func">
-                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 12</span>
+                        <span>2015-12-12</span><span class="iconfont com-icon">&#xe610; 评论</span><span class="iconfont">&#xe60e; 12</span>
                     </div>
                     <div class="comment-box">
                         <div class="comment-li">
@@ -71,6 +79,10 @@
                                 2015-12-18
                             </div>
                         </div>
+                        <div class="com-form clearfix">
+                            <div class="input"><textarea name="content"></textarea></div>
+                            <input type="button" value="发布">
+                        </div>
                     </div>
 	 			</div>
 	 		</div>
@@ -83,11 +95,33 @@
                     <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
                     <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
                     <div class="func">
-                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                        <span>2015-12-12</span><span class="iconfont com-icon">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                    </div>
+                     <div class="comment-box">
+                        <div class="comment-li">
+                            <div class="comment">
+                                <span class="com-name">Kinice：</span>我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。
+                            </div>
+                            <div class="comment-time">
+                                2015-12-18
+                            </div>
+                        </div>
+                        <div class="comment-li">
+                            <div class="comment">
+                                <span class="com-name">Kinice：</span>我是评论的内容。。
+                            </div>
+                            <div class="comment-time">
+                                2015-12-18
+                            </div>
+                        </div>
+                        <div class="com-form clearfix">
+                            <div class="input"><textarea name="content"></textarea></div>
+                            <input type="button" value="发布">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="talk-box">
+             <div class="talk-box">
                 <div class="talk-left">
                     <img src="images/avatar1.jpg" class="avatar">
                     <span class="name">Kinice</span>
@@ -96,46 +130,29 @@
                     <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
                     <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
                     <div class="func">
-                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                        <span>2015-12-12</span><span class="iconfont com-icon">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
                     </div>
-                </div>
-            </div>
-            <div class="talk-box">
-                <div class="talk-left">
-                    <img src="images/avatar2.jpg" class="avatar">
-                    <span class="name">Kinice</span>
-                </div>
-                <div class="talk-main">
-                    <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
-                    <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
-                    <div class="func">
-                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
-                    </div>
-                </div>
-            </div>
-            <div class="talk-box">
-                <div class="talk-left">
-                    <img src="images/avatar2.jpg" class="avatar">
-                    <span class="name">Kinice</span>
-                </div>
-                <div class="talk-main">
-                    <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
-                    <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
-                    <div class="func">
-                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
-                    </div>
-                </div>
-            </div>
-            <div class="talk-box">
-                <div class="talk-left">
-                    <img src="images/avatar2.jpg" class="avatar">
-                    <span class="name">Kinice</span>
-                </div>
-                <div class="talk-main">
-                    <div class="content">我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！我今天上传了一个视频（虫儿飞），再哪可以看到那。这年龄大了，脑子就是不好使啊！</div>
-                    <div class="pic"><img src="./images/bg1.jpg" alt="s"/></div>
-                    <div class="func">
-                        <span>2015-12-12</span><span class="iconfont">&#xe610; 评论</span><span class="iconfont">&#xe60e; 赞</span>
+                     <div class="comment-box">
+                        <div class="comment-li">
+                            <div class="comment">
+                                <span class="com-name">Kinice：</span>我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。我是评论的内容。。
+                            </div>
+                            <div class="comment-time">
+                                2015-12-18
+                            </div>
+                        </div>
+                        <div class="comment-li">
+                            <div class="comment">
+                                <span class="com-name">Kinice：</span>我是评论的内容。。
+                            </div>
+                            <div class="comment-time">
+                                2015-12-18
+                            </div>
+                        </div>
+                        <div class="com-form clearfix">
+                            <div class="input"><textarea name="content"></textarea></div>
+                            <input type="button" value="发布">
+                        </div>
                     </div>
                 </div>
             </div>
