--- a/views/css/style.css
+++ b/views/css/style.css
@@ -86,6 +86,7 @@
 	font-size: 40px;
 	font-weight: normal;
 	font-family: "楷体";
+    line-height: 40px;
 }
 .logo h2{
 	color:#fff;
@@ -342,8 +343,42 @@
     font-size: 14px;
     margin-right: 20px;
 }
+/*发表区*/
+.con-p{
+	margin:5px;
+}
+.con-form{
+	display: block;
+	width: 100%;
+	padding-bottom: 5px;
+}
+.con-form textarea{
+	border-width: 1px;
+	width: 98%;
+	height: 68px;
+	resize:none;
+	padding: 4px 5px;
+	margin-bottom: 5px;
+}
+.con-form textarea:focus{
+	border-color: #1ba321;
+}
+.con-form input[type='button']{
+	float: right;
+	background-color: #1ba321;
+	border: none;
+	width: 50px;
+	height: 26px;
+	margin-right: 3px;
+	color: #fff;
+	cursor: pointer;
+}
+.iconfont{
+	cursor: pointer;
+}
 /*评论区*/
 .comment-box{
+	display: none;
     width: 95%;
     border: 1px solid #ccc;
     padding: 10px;
@@ -355,7 +390,7 @@
 .comment-box:before,.comment-box:after{
     position: absolute;
     top: -10px;
-    left: 112px;
+    left: 182px;
     border-width: 0 8px 10px;
     border-style: solid;
     border-color: transparent transparent #ddd;
@@ -378,4 +413,76 @@
 .com-name{
     font-size: 17px;
     color: #14b4b0;
+}
+.com-form{
+	display: block;
+	width: 100%;
+	padding-bottom: 5px;
+	padding-top: 10px;
+}
+.com-form textarea{
+	border-width: 1px;
+	width: 98%;
+	height: 58px;
+	resize:none;
+	padding: 4px 5px;
+	margin-bottom: 5px;
+}
+.com-form textarea:focus{
+	border-color: #1ba321;
+}
+.com-form input[type='button']{
+	float: right;
+	background-color: #1ba321;
+	border: none;
+	width: 50px;
+	height: 26px;
+	margin-right: 3px;
+	color: #fff;
+	cursor: pointer;
+}
+/*settings*/
+.g-inner-logreg {
+    width: 350px;
+    margin: 0 auto;
+    padding: 60px 0 50px 0;
+}
+
+.g-inner-logreg input {
+    width: 200px;
+    height: 25px;
+    margin-top: 20px;
+    right: 0px;
+    display: inline-block;
+    -webkit-box-shadow: 0 0 0 8px #eef7f9;
+    box-shadow: 0 0 0 8px #eef7f9;
+    border: 1px solid #cfdfe3;
+    outline: 0;
+    padding: 0 6px;
+}
+
+.g-inner-logreg label {
+    display: inline-block;
+    width: 100px;
+    height: 29px;
+    margin-top: 20px;
+    text-align: right;
+}
+
+.g-inner-logreg .button {
+    display: block;
+    margin: 60px auto;
+    background-color: #deeef4;
+    color: #4d5a5e;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 10px;
+    outline: none;
+    height: 30px;
+}
+
+.g-inner-logreg input:focus {
+    border-color: #93c2ec;
+    -webkit-box-shadow: 0 0 0 8px #e1ecf5;
+    box-shadow: 0 0 0 8px #e1ecf5;
 }
