--- a/views/myPage.html
+++ b/views/myPage.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./fonts/iconfont.css">
 	<link rel="stylesheet" href="./css/style.css">
-	<script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/mainAjax.js"></script>
+	<script src="./js/jquery-2.1.4.min.js"></script>
+    <script src="js/myAjax.js"></script>
 </head>
 <body>
 <div class="bg-img">
@@ -26,9 +26,9 @@
             <ul>
                 <li><a href="/HelpHomework/views/mainPage.html">主页</a></li>
                 <li class="nav-inside">
-                    <a href="/HelpHomework/views/myPage.html">我的心情</a>
+                    <a href="/about">我的心情</a>
                     <ul>
-                        <li><a href="/HelpHomework/views/settings.html">设置</a></li>
+                        <li><a href="#">设置</a></li>
                     </ul>  
                 </li>
             </ul>
@@ -42,15 +42,8 @@
 	 <div class="g-bd">
 	 	<div class="g-inner">
 	 		<div class="talk-box">
-	 			<h1>最新动态</h1>
+	 			<h1>我的心情</h1>
 	 		</div>
-            <div class="talk-box">
-                <p class="con-p">有什么心情想告诉大家？</p>
-                <div class="con-form clearfix">
-                    <div class="input"><textarea name="content"></textarea></div>
-                    <input type="button" value="发布">
-                </div>
-            </div>
 	 	</div>
 	 </div>
      <i class="iconfont back-to-top">&#xe60d;</i>
