--- a/views/index.html
+++ b/views/index.html
@@ -35,18 +35,18 @@
 				</ul>
 				<div class="log">
                     <p>使用榕叶账号登录</p>
-					<form action="#" method="post">
-						<input type="text" placeholder="用户名">
-						<input type="password" placeholder="密码">
+					<form action="/HelpHomework/src/login.php" method="post">
+						<input type="text" placeholder="用户名" name="username">
+						<input type="password" placeholder="密码" name="password">
 						<input type="submit" value="登 录">	
 					</form>
 				</div>
 				<div class="reg">
                     <p>加入榕叶，分享你的心情</p>
-					<form action="#" method="post">
-						<input type="text" placeholder="用户名">
-						<input type="password" placeholder="密码">
-						<input type="submit" value="注 册">
+					<form action="/HelpHomework/src/register.php" method="post">
+						<input type="text" placeholder="用户名" name="username">
+						<input type="password" placeholder="密码" name="password">
+						<input type="submit" value="登 录">	
 					</form>
 				</div>
 			</div>
