--- a/views/settings.html
+++ b/views/settings.html
@@ -4,12 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale = 1.0" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>我的首页 榕叶-分享心情的地方</title>
+    <title>设置 榕叶-分享心情的地方</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./fonts/iconfont.css">
 	<link rel="stylesheet" href="./css/style.css">
-	<script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/mainAjax.js"></script>
+	<script src="./js/jquery-2.1.4.min.js"></script>
 </head>
 <body>
 <div class="bg-img">
@@ -42,15 +41,21 @@
 	 <div class="g-bd">
 	 	<div class="g-inner">
 	 		<div class="talk-box">
-	 			<h1>最新动态</h1>
+	 			<h1>我的信息设置</h1>
 	 		</div>
-            <div class="talk-box">
-                <p class="con-p">有什么心情想告诉大家？</p>
-                <div class="con-form clearfix">
-                    <div class="input"><textarea name="content"></textarea></div>
-                    <input type="button" value="发布">
-                </div>
-            </div>
+	 		<div class="talk-box">
+	 			<div class="g-inner-logreg">
+		 			<form action="/HelpHomework/src/setting.php" method="post">
+		 				<label>昵称：</label> <input type="text" name="nickname"/><br/>
+	            		<label>性别：</label> <select name="sex">
+	            			<option value="0">女</option>
+	            			<option value="1">男</option>
+	            		</select><br/>
+	            		<label>E-mail：</label> <input type="email" name="email"><br/>
+	            		<input type="submit" value="确定设置" class="button"/>
+		 			</form>
+		 		</div>
+	 		</div>
 	 	</div>
 	 </div>
      <i class="iconfont back-to-top">&#xe60d;</i>
