--- a/work/views/css/style.css
+++ b/work/views/css/style.css
@@ -291,7 +291,7 @@
 	box-shadow: 0.6px 0.6px 2px #ddd;
 	border-radius: 3px;
 	background-color: #fff;
-	padding: 2px 15px;
+	padding: 10px 15px;
     zoom: 1;
 }
 .talk-box:after{/*清除浮动*/
@@ -304,26 +304,34 @@
 }
 .talk-left{/*头像及名称*/
     height: 70px;
-    padding: 10px 10px;
-    width: 50px;
+    padding: 5px 0;
+    width: 70px;
+    text-align: center;
     float: left;
 }
 .talk-left .avatar{
-	height: 44px;
-	width: 44px;
+	height: 42px;
+	width: 42px;
 	border-radius: 50%;
 }
 .talk-box .name{
     height: 40px;
+    width: 70px;
     line-height: 40px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow:ellipsis;
+    display: inline-block;
+    text-align: center;
 }
 .talk-main{/*微博正文盒子*/
     overflow: hidden;
     padding-left: 20px;
-    padding-top: 10px;
+    padding-top: 4px;
 }
 .content{
     padding-right: 15px;
+    padding-left: 5px;
     line-height: 1.5;
 }
 .pic{
