--- a/work/views/settings.html
+++ b/work/views/settings.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./fonts/iconfont.css">
 	<link rel="stylesheet" href="./css/style.css">
-	<script src="./js/jquery-2.1.4.min.js"></script>
+	<script src="js/jquery-2.1.4.min.js"></script>
 </head>
 <body>
 <div class="bg-img">
